--- a/Project4-Fletcher-Data-Acq.ipynb
+++ b/Project4-Fletcher-Data-Acq.ipynb
@@ -1,17 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "https://devtools.dol.gov/APISampler/Home/SearchIndex\n",
-    "https://en.wikipedia.org/wiki/Lists_of_occupations\n",
-    "http://blog.nycdatascience.com/student-works/project-3-web-scraping-company-data-from-indeed-com-and-dice-com/"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -23,6 +14,7 @@
     "from pymongo import MongoClient\n",
     "import pandas as pd\n",
     "import pickle\n",
+    "import seaborn as sns\n",
     "\n",
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt"
@@ -618,28 +610,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 562,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<li><a href=\"/wiki/Chief_web_officer\" title=\"Chief web officer\">Chief web officer</a></li>"
-      ]
-     },
-     "execution_count": 562,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "item.previous"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 410,
    "metadata": {
     "collapsed": true
@@ -1059,7 +1029,7 @@
    "metadata": {},
    "source": [
     "**note\n",
-    "monster and muse are protected by js"
+    "monster and muse are protected by js, which is why I didn't scrape them"
    ]
   },
   {
@@ -1132,28 +1102,6 @@
     "url = base_url.format(job, pg)\n",
     "indeed_res= requests.get(url)\n",
     "indeed_soup = BeautifulSoup(indeed_res.text, 'lxml')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 537,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'http://www.indeed.com/jobs?q=Creative+director&jt=fulltime&sort=date&start=1'"
-      ]
-     },
-     "execution_count": 537,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "url"
    ]
   },
   {
@@ -5704,138 +5652,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>_id</th>\n",
-       "      <th>company</th>\n",
-       "      <th>desc</th>\n",
-       "      <th>job</th>\n",
-       "      <th>job_url</th>\n",
-       "      <th>source</th>\n",
-       "      <th>title</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>17951</th>\n",
-       "      <td>58bfb34dcbd9585ca9596fb0</td>\n",
-       "      <td>\\nBenihana National Corporation\\n•\\nSan Franci...</td>\n",
-       "      <td>\\nJob Description\\n\\nResponsible for the overa...</td>\n",
-       "      <td>/wiki/General_manager</td>\n",
-       "      <td>http://www.careerbuilder.com/job/J3H1JT6LZB14D...</td>\n",
-       "      <td>careerbuilder</td>\n",
-       "      <td>\\n\\nGeneral Manager\\n\\n</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7210</th>\n",
-       "      <td>58bf82eacbd9585ca95945bb</td>\n",
-       "      <td>\\nVertafore\\n•\\nDenver, CO\\n</td>\n",
-       "      <td>\\nJob Description\\n\\n\\nWe are seeking a highly...</td>\n",
-       "      <td>/wiki/Chief_communications_officer</td>\n",
-       "      <td>http://www.careerbuilder.com/job/J3L1PG6Z0555K...</td>\n",
-       "      <td>careerbuilder</td>\n",
-       "      <td>\\n\\nSenior Manager, Internal Communications\\n\\n</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5264</th>\n",
-       "      <td>58bf7a60cbd9585ca9593e21</td>\n",
-       "      <td>\\nColumbia, SC\\n</td>\n",
-       "      <td>\\nJob Description\\n\\n Job:   Environmental/Foo...</td>\n",
-       "      <td>/wiki/Gunsmith</td>\n",
-       "      <td>http://www.careerbuilder.com/job/J3K1CB5Y520RQ...</td>\n",
-       "      <td>careerbuilder</td>\n",
-       "      <td>\\n\\nMaintenance Technician (Full Time)\\n\\n</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3440</th>\n",
-       "      <td>58bf71f1cbd9585ca9593701</td>\n",
-       "      <td>\\nDignity Health\\n•\\nBakersfield, CA\\n</td>\n",
-       "      <td>\\nJob Description\\n\\n\\nUnder the direction of ...</td>\n",
-       "      <td>/wiki/Medical_laboratory_scientist</td>\n",
-       "      <td>http://www.careerbuilder.com/job/J3L2DC62FWP0J...</td>\n",
-       "      <td>careerbuilder</td>\n",
-       "      <td>\\n\\nClinical Lab Scientist (Full Time/Night)\\n\\n</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8044</th>\n",
-       "      <td>58bf86a2cbd9585ca95948fd</td>\n",
-       "      <td>\\nAct 1\\n•\\nBakersfield, CA\\n</td>\n",
-       "      <td>\\nJob Description\\n\\nImmediate need for a Lead...</td>\n",
-       "      <td>/wiki/Train_dispatching</td>\n",
-       "      <td>http://www.careerbuilder.com/job/J3K0PW78VP1NQ...</td>\n",
-       "      <td>careerbuilder</td>\n",
-       "      <td>\\n\\nLead Dispatcher\\n\\n</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                            _id  \\\n",
-       "17951  58bfb34dcbd9585ca9596fb0   \n",
-       "7210   58bf82eacbd9585ca95945bb   \n",
-       "5264   58bf7a60cbd9585ca9593e21   \n",
-       "3440   58bf71f1cbd9585ca9593701   \n",
-       "8044   58bf86a2cbd9585ca95948fd   \n",
-       "\n",
-       "                                                 company  \\\n",
-       "17951  \\nBenihana National Corporation\\n•\\nSan Franci...   \n",
-       "7210                        \\nVertafore\\n•\\nDenver, CO\\n   \n",
-       "5264                                    \\nColumbia, SC\\n   \n",
-       "3440              \\nDignity Health\\n•\\nBakersfield, CA\\n   \n",
-       "8044                       \\nAct 1\\n•\\nBakersfield, CA\\n   \n",
-       "\n",
-       "                                                    desc  \\\n",
-       "17951  \\nJob Description\\n\\nResponsible for the overa...   \n",
-       "7210   \\nJob Description\\n\\n\\nWe are seeking a highly...   \n",
-       "5264   \\nJob Description\\n\\n Job:   Environmental/Foo...   \n",
-       "3440   \\nJob Description\\n\\n\\nUnder the direction of ...   \n",
-       "8044   \\nJob Description\\n\\nImmediate need for a Lead...   \n",
-       "\n",
-       "                                      job  \\\n",
-       "17951               /wiki/General_manager   \n",
-       "7210   /wiki/Chief_communications_officer   \n",
-       "5264                       /wiki/Gunsmith   \n",
-       "3440   /wiki/Medical_laboratory_scientist   \n",
-       "8044              /wiki/Train_dispatching   \n",
-       "\n",
-       "                                                 job_url         source  \\\n",
-       "17951  http://www.careerbuilder.com/job/J3H1JT6LZB14D...  careerbuilder   \n",
-       "7210   http://www.careerbuilder.com/job/J3L1PG6Z0555K...  careerbuilder   \n",
-       "5264   http://www.careerbuilder.com/job/J3K1CB5Y520RQ...  careerbuilder   \n",
-       "3440   http://www.careerbuilder.com/job/J3L2DC62FWP0J...  careerbuilder   \n",
-       "8044   http://www.careerbuilder.com/job/J3K0PW78VP1NQ...  careerbuilder   \n",
-       "\n",
-       "                                                  title  \n",
-       "17951                           \\n\\nGeneral Manager\\n\\n  \n",
-       "7210    \\n\\nSenior Manager, Internal Communications\\n\\n  \n",
-       "5264         \\n\\nMaintenance Technician (Full Time)\\n\\n  \n",
-       "3440   \\n\\nClinical Lab Scientist (Full Time/Night)\\n\\n  \n",
-       "8044                            \\n\\nLead Dispatcher\\n\\n  "
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mongodf.sample(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 15,
    "metadata": {
     "collapsed": false
@@ -5853,6 +5669,7 @@
     }
    ],
    "source": [
+    "# how many have low overall job counts\n",
     "sum(mongodf['job'].value_counts() < 10)"
    ]
   },
@@ -5943,6 +5760,7 @@
    },
    "outputs": [],
    "source": [
+    "# trim out the jobs with less than 10 occurances\n",
     "trimmed_df=mongodf[mongodf['less_10']==False]"
    ]
   },
@@ -5978,7 +5796,6 @@
     }
    ],
    "source": [
-    "\n",
     "plt.hist(trimmed_df['job'].value_counts())"
    ]
   },
@@ -5991,50 +5808,6 @@
    "outputs": [],
    "source": [
     "clean_job_posts = trimmed_df.drop_duplicates(subset=['desc']).reset_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(34453, 9)"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "clean_job_posts.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(72710, 8)"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "trimmed_df.shape"
    ]
   },
   {
