--- a/Project4-Fletcher-NLP-model.ipynb
+++ b/Project4-Fletcher-NLP-model.ipynb
@@ -83,34 +83,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "posts_no_wiki = posts[~(posts['source']=='wiki')]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 320,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "docs_no_wiki = posts_no_wiki['desc']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 239,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
+    "posts_no_wiki = posts[~(posts['source']=='wiki')]\n",
+    "docs_no_wiki = posts_no_wiki['desc']\n",
     "docs_dup_drop = posts['desc']"
    ]
   },
@@ -162,6 +142,7 @@
     }
    ],
    "source": [
+    "# hack to figure out which docs are getting tripped up on\n",
     "dropped_docs_nodup = pickle.load(open(\"dropped_docs.p\", \"rb\"))\n",
     "dropped_docs_nodup"
    ]
@@ -192,57 +173,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(34132, 8)"
-      ]
-     },
-     "execution_count": 324,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "full_posts_nodup.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 325,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(34132,)"
-      ]
-     },
-     "execution_count": 325,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dropped_posts_nodup.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 326,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "default_stopwords = set(nltk.corpus.stopwords.words('english'))\n"
+    "default_stopwords = set(nltk.corpus.stopwords.words('english'))"
    ]
   },
   {
@@ -277,6 +214,7 @@
    },
    "outputs": [],
    "source": [
+    "# test with some generic biology words\n",
     "skills = ['pipette biology']\n",
     "tfidf_skills = tfidf_nodup.transform(skills)\n",
     "sim = cosine_similarity(tfidf_jobdesc_nodup, tfidf_skills)"
@@ -365,6 +303,7 @@
     }
    ],
    "source": [
+    "# get a visual of common words\n",
     "wordcloud = WordCloud(max_font_size=40, max_words=100, stopwords=posting_stop_words, background_color='white').generate(' '.join(text))\n",
     "plt.figure()\n",
     "plt.imshow(wordcloud)\n",
@@ -490,6 +429,7 @@
    },
    "outputs": [],
    "source": [
+    "# Look at key words in \"topics\"\n",
     "key_words = []\n",
     "for job_set in set_array:\n",
     "    temp_job = job_set\n",
@@ -824,41 +764,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "model = TSNE(n_components=2)\n",
-    "np.set_printoptions(suppress=True)\n",
-    "tsne_plot = model.fit_transform(dtm_lsa) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(20, 7239)"
-      ]
-     },
-     "execution_count": 110,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lsa.components_.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 343,
    "metadata": {
     "collapsed": true
@@ -930,6 +835,7 @@
     }
    ],
    "source": [
+    "# take a look at similar docs\n",
     "full_posts_nodup.iloc[7594]['desc']"
    ]
   },
@@ -941,28 +847,8 @@
    },
    "outputs": [],
    "source": [
-    "full_posts_nodup['df_ind'] = full_posts_nodup.index"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 336,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "jsondf= full_posts_nodup.iloc[:,2:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 337,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
+    "full_posts_nodup['df_ind'] = full_posts_nodup.index\n",
+    "jsondf= full_posts_nodup.iloc[:,2:]\n",
     "store = jsondf.to_json(orient='index', force_ascii=False)"
    ]
   },
@@ -988,28 +874,6 @@
     "client = MongoClient()\n",
     "db = client.jobdescriptiondb\n",
     "jobmongo = db.jobdesc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 265,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'{\"0\":{\"company\":null,\"job_url\":null,\"title\":null,\"desc\":\"\\\\n\\\\n\\\\n\\\\n\\\\nThis article needs additional citations for verification. Please help improve this article by adding citations to reliable sources. Unsourced material may be challenged and removed. (April 2009) (Learn how and when to remove this template message)\\\\n\\\\n\\\\nA creative director is a position often found within the graphic design, film, music, fashion, advertising, media, or entertainment industries, but may be useful in other creative organizations such as web development and software development firms as well.\\\\nA creative director is a vital role in all of the arts and entertainment industries. In another sense, they can be seen as another element in any product development process. The creative director may also assume the role'"
-      ]
-     },
-     "execution_count": 265,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "store[0:800]"
    ]
   },
   {
@@ -2077,17 +1941,6 @@
    ],
    "source": [
     "jobmongo.find_one({'df_ind': 1000}, {'job_url': 1, 'title': 1})['title'].strip()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# use with 2grams?"
    ]
   }
  ],
